--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "csv-parse": "*",
-    "fast-csv": "*"
+    "fast-csv": "*",
+    "cors":"*"
   }
 }
